<resources>
    <string name="app_name">AI Avatar</string>

    <string name="start_publishing">Start Publishing</string>
    <string name="stop_publishing">Stop Publishing</string>
    <string name="started_publishing">Publishing Started</string>
    <string name="stopped_publishing">Publishing Stopped</string>
    <string name="disconnected_publishing">Publishing Disconnected</string>
    <string name="failed_publishing">Failed To Connect</string>

    <string name="error_empty_url">url is empty</string>

    <string name="publishing_label">LIVE  %1$s:%2$s</string>
    <string name="label_publish">Publish</string>
    <string name="label_watch">Watch</string>
    <string name="label_go">GO</string>
    <string name="label_cancel">Cancel</string>
    <string name="stream_name">Stream Name</string>
    <string name="retry">Retry</string>
    <string name="url">URL</string>
    <string name="ip_host">Host / IP Address</string>
    <string name="watch_here">Watch here!</string>

    <string name="something_went_wrong_try_later">Something went wrong! try again later.</string>
    <string name="check_your_internet">Please check your internet connection!</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="streams">Streams</string>
    <string name="initializing">Initializing..</string>
    <string name="content_description_live_record_button">Live record button</string>
    <string name="content_description_login_button">Login Button</string>
    <string name="label_yes">Yes</string>
    <string name="content_description_options">Options</string>
    <string name="content_description_settings">Settings</string>
    <string name="content_description_profile">Profile</string>
    <string name="content_description_no_internet">No Internet</string>
    <string name="walkthrough_des_1">Feel free to use, distribute and manipulate your image as desired.</string>
    <string name="walkthrough_des_2">Transform your photos into numerous exceptional digital portrayals.</string>
    <string name="walkthrough_des_3">Edit pictures with ease with AI-powered instant Touch-up.</string>
    <string name="label_continue">Continue</string>
    <string name="label_try_now">Try now</string>

    <string name="username_with_prefix"><![CDATA[\@%1$s]]></string>
    <string name="label_settings">Settings</string>
    
    <string name="walkthrough_big_des_1">Generate 100+ AI Avatars from your photos</string>
    <string name="walkthrough_big_des_1_multicolor">100+</string>

    <string name="upload_step_des1">Please be aware that there is a risk of artefacts, inaccuracies, and defects in output images when using the type of Al we employ for Magic Avatars. This is beyond our control. Kindly acknowledge and accept this risk before proceeding.</string>
    <string name="upload_step_2_des_1">For more appropriate results please upload bright photos where your face is fully visible.</string>
    <string name="good_examples_des_1">Close-up selfies, same person, adults, variety of backgrounds, facial expression, head tilts and angles</string>
    <string name="bad_examples_des_1">Group shots, full-length, kids, covered faces, animals, monotonous pics, nudes</string>
    <string name="upload_step_3_des1">Let us know which gender best describes you</string>

    <string name="permissions_required">Permissions Required</string>
    <string name="files_permission_des">To use this feature, we request you to allow AI Avatar to access your media files. We assure you that this will be safe.</string>
    <string name="files_permission_rationale_des">To use this feature, we request you to allow AI Avatar to access your media files. We assure you that this will be safe.</string>
    <string name="create_your_masterpiece">Create Your Masterpiece</string>
    <string name="content_description_download">Download</string>
    <string name="num_photos">%1$d Photos</string>
    <string name="subscription_description">%1$d variations in %2$d styles</string>
    <string name="content_description_selected_photo">Selected Photo Indicator</string>

    <!-- Notification channel based -->
    <string name="general_notifications_channel_id">ai_avatar_general_alerts</string>
    <string name="title_general_notifications">General Alerts</string>
    <string name="desc_general_notifications">All alerts from AI Avatar</string>

    <string name="upload_notification_channel_id">ai_avatar_upload_alerts</string>
    <string name="title_upload_notifications">Photos Upload</string>
    <string name="desc_upload_notifications">Current status of the photos upload</string>

    <string name="download_notification_channel_id">ai_avatar_download_alerts</string>
    <string name="title_download_notifications">Photos Download</string>
    <string name="desc_download_notifications">Current status of the photos download</string>
    <!-- END - Notification channel based -->

    <string name="cancel_upload">Cancel Upload</string>
    <string name="label_download">Download</string>
    <string name="content_description_backdrop">Backdrop</string>
    <string name="content_description_action_button">Page Action</string>
    <string name="content_description_close">Close</string>
    <string name="label_save">Save</string>
    <string name="label_recreate">Recreate</string>

    <string name="cannot_refresh_message">Can\'t refresh. Last updated %1$s</string>
    <string name="uploading_photos_">Uploading Photos.. %1$s</string>

    <string name="version_info" translatable="false"><![CDATA[%1$s \u2022 %2$s]]></string>

    <string name="hours_single">An hour ago</string>
    <string name="hours_more">%1$d hours ago</string>

    <string name="minutes_single">moments ago</string>
    <!--<string name="minutes_more">%1$d minutes ago</string>-->
    <string name="minutes_more">few minutes ago</string>
    <string name="label_result">Result</string>
    <string name="content_description_delete_photo">Delete Photo</string>
    <string name="content_description_go_back">Go back</string>
    <string name="label_create">Create</string>
    <string name="walkthrough2_title_1">Create stunning, mesmerizing avatars from your photos.</string>
    <string name="good_examples">Good Examples</string>
    <string name="content_description_create">Create</string>
    <string name="label_next">Next</string>
    <string name="terms_paragraph">Our Platform offers its users with an option to engage with AI Avatar products. Upon your use of the said AI Avatar Products offered on our Platform…</string>
    <string name="privacy_paragraph">This Privacy Policy applies to our collection, use and sharing of your personal information when you use our Platform or any other website, service, software application to which we post this privacy policy (the “Sites”); use our services through a user account; or receive our marketing communications. For convenience, we refer to the Sites and our services collectively as the “Service”.</string>
    <string name="Eta_text">ETA %1$s</string>
    <string name="label_loading">Loading..</string>
    <string name="in_app_payment_processing_des_1">Please do not close this page until the payment is complete…</string>
    <string name="in_app_payment_bank_processing_des_1">The Bank Servers are taking too long to process the payment. Please wait until we confirm with the bank.</string>
    <string name="i_have_coupon_code">I have a coupon code</string>
    <string name="hint_enter_the_coupon_code">Enter the coupon code</string>
    <string name="write_your_experience">Write Your Experience</string>
    <string name="content_description_feedback_emoction">Feedback emoction</string>
    <string name="feedback">Feedback</string>
    <string name="content_description_feedback">Feedback</string>

    <string name="delete_my_account">Delete my Account</string>
    <string name="delete_account_description_1"><![CDATA[The account deletion process will take place after 7 days. Until that, the data associated with your account, will not be instantly removed from AI Avatar.  At this time, if you want, you can easily retrieve your account by signing in.]]>
    </string>
    <string name="delete_account_title_1">Please note that, deleting your account will lead to</string>
    <string-array name="delete_account_pt_entries">
        <item>Permanent removal of your account from AI Avatar.</item>
        <item>Permanently erase all your history associated with AI Avatar</item>
        <item>Permanently delete all your text, media content in AI Avatar</item>
    </string-array>
    <string name="delete_account_pt_1">Permanent removal of your account from AI Avatar.</string>
    <string name="delete_account_pt_2">Permanently erase all your history associated with AI Avatar</string>
    <string name="delete_account_pt_3">Permanently delete all your text, media content in AI Avatar</string>
    <string name="delete_account_otp_title">To delete your account, You need to verify your email with OTP</string>
    <string name="delete_account_consent_1">Deleting your account will completely remove your profile, stories posted, highlights, reactions, comments and your followers from AI Avatar platform. Kindly ensure this and proceed with yourdeleting process.</string>
    <string name="delete_account_questionnaire_title">Why do you delete AI Avatar account?</string>
    <string name="delete_account_questionnaire_opt_1">Privacy concerns</string>
    <string name="delete_account_questionnaire_opt_2">Poor app UI &amp; UX</string>
    <string name="delete_account_questionnaire_opt_3">Other troubles in using the app</string>
    <string name="delete_account_questionnaire_opt_4">It\'s too distracting one</string>
    <string-array name="delete_account_questionnaire_opts">
        <item>Privacy concerns</item>
        <item>Poor app UI &amp; UX</item>
        <item>Other troubles in using the app</item>
        <item>It\'s too distracting one</item>
    </string-array>
    <string name="optional_write_your_experience">Write your Experience (Optional)</string>
    <string name="content_description_model_options">Model options</string>
    <string name="server_maintenance_des_1">We apologize for the inconvenience, our site is currently undergoing maintenance.</string>
    <string name="model_picker_description">
        <![CDATA[<b>Tip: </b>You can create new avatars without uploading new photos again by selecting a model below 👇. \n You can also find your models at <b>Profile -> Model -> Recreate</b>]]>
    </string>
    <string name="skip_and_continue">Skip and Continue</string>
    <string name="content_description_information">Information</string>
    <string name="label_try_again">TRY AGAIN</string>

    <plurals name="hours_ago">
        <item quantity="one">@string/hours_single</item>
        <item quantity="other">@string/hours_more</item>
    </plurals>
    <plurals name="minutes_ago">
        <item quantity="one">@string/minutes_single</item>
        <item quantity="other">@string/minutes_more</item>
    </plurals>
</resources>