<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_1"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backdrop_1"
        android:foreground="@drawable/backdrop_overlay"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description_backdrop"
        android:translationZ="0dp"
        android:visibility="gone" />

    <ImageView android:id="@+id/btn_close"
        android:layout_width="@dimen/large_icon_size"
        android:layout_height="@dimen/large_icon_size"
        android:layout_margin="@dimen/inset_large"
        android:src="@drawable/cancel_transparent_rounded"
        android:background="@drawable/ripple_rounded"
        android:contentDescription="@string/content_description_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/half_screen_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <com.airbnb.lottie.LottieAnimationView android:id="@+id/thinking"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/maintenance"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/half_screen_guideline"
        app:layout_constraintBottom_toBottomOf="@id/half_screen_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintDimensionRatio="H,1:1"
        tools:visibility="visible"/>

    <TextView android:id="@+id/app_name"
        style="@style/Base.TextAppearance.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        android:letterSpacing="0.1"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/thinking"
        app:layout_constraintBottom_toBottomOf="@id/thinking"
        app:layout_constraintStart_toStartOf="@id/thinking"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintEnd_toEndOf="@id/thinking" />

    <TextView
        android:id="@+id/force_update_title"
        style="@style/TextStyle.Large.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/inset_large"
        android:text="We're Cooking Features!"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/force_update_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/half_screen_guideline"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/force_update_description"
        style="@style/TextStyle.VerySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/inset_small"
        android:text="@string/server_maintenance_des_1"
        android:textColor="@color/text_secondary_alt"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/force_update_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>