<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    tools:background="@color/bottom_sheet_background">

    <ImageView android:id="@+id/btn_close"
        android:layout_width="@dimen/large_icon_size"
        android:layout_height="@dimen/large_icon_size"
        android:layout_margin="@dimen/inset_small"
        android:src="@drawable/cancel_transparent_rounded"
        android:background="@drawable/ripple_rounded"
        android:contentDescription="@string/content_description_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/top_barrier"
        app:layout_constraintHorizontal_bias="1.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        app:barrierDirection="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_close"/>


    <TextView android:id="@+id/title"
        style="@style/TextStyle.Large.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/inset_large"
        android:text="Hey wait!"
        android:textColor="@color/signal_inverse_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_barrier"
        app:layout_constraintBottom_toBottomOf="@id/top_barrier"
        app:layout_constraintVertical_chainStyle="packed"/>

    <ImageView android:id="@+id/description_leading_icon"
        android:layout_width="@dimen/default_icon_size"
        android:layout_height="@dimen/default_icon_size"
        android:layout_margin="@dimen/inset_very_small"
        android:src="@drawable/baseline_info_24"
        app:tint="@color/signal_inverse_primary"
        android:contentDescription="@string/content_description_information"
        app:layout_constraintTop_toTopOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/description"
        android:visibility="gone" />

    <TextView android:id="@+id/description"
        style="@style/TextStyle.VerySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/inset_large"
        android:textAlignment="textStart"
        android:text="@string/model_picker_description"
        android:textColor="@color/signal_inverse_primary"
        app:layout_constraintStart_toEndOf="@id/description_leading_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/model_list_container"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constrainedWidth="true"/>

    <FrameLayout android:id="@+id/model_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/inset_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/model_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/item_model_list_alt" />

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/inset_small">


            <Space android:layout_width="match_parent"
                android:layout_height="@dimen/spacer_size_very_small"
                android:visibility="gone"/>

        </LinearLayout>
    </FrameLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/inset_large"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.Bold"
        android:textSize="16sp"
        app:cornerRadius="@dimen/button_corner_size"
        app:cpb_colorIndicator="@color/white"
        app:cpb_colorProgress="?attr/colorSecondary"
        app:cpb_colorIndicatorBackground="?attr/colorSecondaryVariant"
        app:cpb_cornerRadius="@dimen/button_corner_size"
        app:cpb_selectorIdle="@drawable/progress_button_state"
        app:cpb_textIdle="@string/skip_and_continue"
        app:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/model_list_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>